fixing form on mobile attempt 1

--- a/demonspore/StyleDemon.css
+++ b/demonspore/StyleDemon.css
@@ -130,7 +130,7 @@ h3 {
 }
 
 form {
-  background-color: #E3FDFD;
+  background-color: #000D10;
   margin-right: auto;
   margin-left: auto;
   width: 660px;
